# OCR-VLM-Based-Vision-Guided-Navigation

./: .gitignore  README.md  guide.txt
MobileVLM/: MobileVLM.ipynb  requirements.txt  test_demo.py
ac_pkg/: CMakeLists.txt  package.xml
ac_pkg/launch/: vgn.launch.py
ac_pkg/src/: ac.py
assets/isaacsim_assets/: up_arrow.mtl  up_arrow.usd  up_arrow.usdc
con_pkg/: CMakeLists.txt  package.xml
con_pkg/action/: NavCommand.action
con_pkg/launch/: vgn.launch.py
con_pkg/src/: con.py
ocr_pkg/: CMakeLists.txt  package.xml
ocr_pkg/src/: ocr.py
ocr_pkg/srv/: OCRInfer.srv
sim/Environments/: sign_world.usd
sim/assets/3D/: blue_left.mtl  blue_left.usd  blue_right.mtl  blue_right.usd  blue_up.mtl  blue_up.usd  green_left.mtl  green_left.usd  green_right.mtl  green_up.mtl  green_up.usd  red_left.mtl  red_right.mtl  red_right.usd  red_up.mtl  red_up.usd  stop.mtl  stop.usd  stop_outlined.mtl  what_sign.mtl  what_sign.usd
vlm_pkg/: CMakeLists.txt  package.xml
vlm_pkg/src/: vlm.py
